--- a/index.html
+++ b/index.html
@@ -3,59 +3,67 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/style.css" />
 		<title>Document</title>
 	</head>
 	<body>
 		<header>
-			<a href="./index.html">Web Studio</a>
-			<nav>
-				<ul>
-					<li><a href="">Студия</a></li>
-					<li><a href="./portfolio.html">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
+			<a href="./index.html" class="logo">
+				<span>Web</span>
+				Studio
+			</a>
+			<nav class="site-nav">
+				<ul class="list">
+					<li><a href="" class="link">Студия</a></li>
+					<li><a href="./portfolio.html" class="link">Портфолио</a></li>
+					<li><a href="" class="link">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			<ul class="contact list">
+				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 		<main>
 			<!-- Hero -->
 
-			<section>
+			<section class="hero">
 				<h1>Эффективные решения для вашего бизнеса</h1>
-				<button>Заказать услугу</button>
+				<button class="button">Заказать услугу</button>
 			</section>
 
 			<!-- Особенности -->
 			<section>
-				<h2>Особенности</h2>
-				<ul>
+				<h2 class="title">Особенности</h2>
+				<ul class="list">
 					<li>
 						<img src="./images/icon1.svg" alt="Антенна" />
-						<h3>Внимание к деталям</h3>
+						<h3 class="title-list">Внимание к деталям</h3>
 						<p>
 							Идейные соображения, а также начало повседневной работы по формированию позиции.
 						</p>
 					</li>
 					<li>
 						<img src="./images/icon2.svg" alt="Часы" />
-						<h3>Пунктуальность</h3>
+						<h3 class="title-list">Пунктуальность</h3>
 						<p>
 							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 						</p>
 					</li>
 					<li>
 						<img src="./images/icon3.svg" alt="Диаграмма" />
-						<h3>Планирование</h3>
+						<h3 class="title-list">Планирование</h3>
 						<p>
 							Равным образом консультация с широким активом в значительной степени обуславливает.
 						</p>
 					</li>
 					<li>
 						<img src="./images/icon4.svg" alt="Астронавт" />
-						<h3>Современные технологии</h3>
+						<h3 class="title-list">Современные технологии</h3>
 						<p>
 							Значимость этих проблем настолько очевидна, что реализация плановых заданий.
 						</p>
@@ -64,80 +72,80 @@
 			</section>
 			<!-- Чем мы занимаемся -->
 			<section>
-				<h2>Чем мы занимаемся</h2>
-				<ul>
+				<h2 class="title">Чем мы занимаемся</h2>
+				<ul class="list">
 					<li>
 						<img src="./images/img1.jpg" alt="Включенный ноутбук" width="370" />
-						<h3>Десктопные приложения</h3>
+						<h3 class="title-list">Десктопные приложения</h3>
 					</li>
 					<li>
 						<img src="./images/img2.jpg" alt="Смартфон" width="370" />
-						<h3>Мобильные приложения</h3>
+						<h3 class="title-list">Мобильные приложения</h3>
 					</li>
 					<li>
 						<img src="./images/img3.jpg" alt="Монитор" width="370" />
-						<h3>Дизайнерские решения</h3>
+						<h3 class="title-list">Дизайнерские решения</h3>
 					</li>
 				</ul>
 			</section>
 			<!-- Наша Команда -->
 
-			<section>
-				<h2>Наша Команда</h2>
-				<ul>
+			<section class="team">
+				<h2 class="title">Наша Команда</h2>
+				<ul class="list">
 					<li>
 						<img src="./images/team_1.jpg" alt="Фото члена команды" width="270" height="260" />
-						<h3>Николай Кучеренко</h3>
-						<p>Product Designer</p>
-						<ul>
+						<h3 class="title-team">Николай Кучеренко</h3>
+						<p class="team-description">Product Designer</p>
+						<ul class="list">
 							<li>
-								<a href="" aria-label="Ссылка на Instagram">instagram</a>
+								<a href="" aria-label="Ссылка на Instagram" class="link">instagram</a>
 							</li>
-							<li><a href="" aria-label="Ссылка на Facebook">facebook</a></li>
-							<li><a href="" aria-label="Ссылка на Twitter">twitter</a></li>
-							<li><a href="" aria-label="Ссылка на Linkedin">linkedin</a></li>
+							<li><a href="" aria-label="Ссылка на Facebook" class="link">facebook</a></li>
+							<li><a href="" aria-label="Ссылка на Twitter" class="link">twitter</a></li>
+							<li><a href="" aria-label="Ссылка на Linkedin" class="link">linkedin</a></li>
 						</ul>
 					</li>
 
 					<li>
 						<img src="./images/team_2.jpg" alt="Фото члена команды" width="270" height="260" />
-						<h3>Ольга Иванова</h3>
-						<p>Frontend Developer</p>
-						<ul>
+						<h3 class="title-team">Ольга Иванова</h3>
+						<p class="team-description">Frontend Developer</p>
+						<ul class="list">
 							<li>
-								<a href="" aria-label="Ссылка на Instagram">instagram</a>
+								<a href="" aria-label="Ссылка на Instagram" class="link">instagram</a>
 							</li>
-							<li><a href="" aria-label="Ссылка на Facebook">facebook</a></li>
-							<li><a href="" aria-label="Ссылка на Twitter">twitter</a></li>
-							<li><a href="" aria-label="Ссылка на Linkedin">linkedin</a></li>
+							<li><a href="" aria-label="Ссылка на Facebook" class="link">facebook</a></li>
+							<li><a href="" aria-label="Ссылка на Twitter" class="link">twitter</a></li>
+							<li><a href="" aria-label="Ссылка на Linkedin" class="link">linkedin</a></li>
 						</ul>
 					</li>
 
 					<li>
 						<img src="./images/team_3.jpg" alt="Фото члена команды" width="270" height="260" />
-						<h3>Андрей Шевченко</h3>
-						<p>Marketing</p>
-						<ul>
+						<h3 class="title-team">Андрей Шевченко</h3>
+						<p class="team-description">Marketing</p>
+						<ul class="list">
 							<li>
-								<a href="" aria-label="Ссылка на Instagram">instagram</a>
+								<a href="" aria-label="Ссылка на Instagram" class="link">instagram</a>
 							</li>
-							<li><a href="" aria-label="Ссылка на Facebook">facebook</a></li>
-							<li><a href="" aria-label="Ссылка на Twitter">twitter</a></li>
-							<li><a href="" aria-label="Ссылка на Linkedin">linkedin</a></li>
+							<li><a href="" aria-label="Ссылка на Facebook" class="link">facebook</a></li>
+							<li><a href="" aria-label="Ссылка на Twitter" class="link">twitter</a></li>
+							<li><a href="" aria-label="Ссылка на Linkedin" class="link">linkedin</a></li>
 						</ul>
 					</li>
 
 					<li>
 						<img src="./images/team_1.jpg" alt="Фото члена команды" width="270" height="260" />
-						<h3>Иван Николаев</h3>
-						<p>UI Designer</p>
-						<ul>
+						<h3 class="title-team">Иван Николаев</h3>
+						<p class="team-description">UI Designer</p>
+						<ul class="list">
 							<li>
-								<a href="" aria-label="Ссылка на Instagram">instagram</a>
+								<a href="" aria-label="Ссылка на Instagram" class="link">instagram</a>
 							</li>
-							<li><a href="" aria-label="Ссылка на Facebook">facebook</a></li>
-							<li><a href="" aria-label="Ссылка на Twitter">twitter</a></li>
-							<li><a href="" aria-label="Ссылка на Linkedin">linkedin</a></li>
+							<li><a href="" aria-label="Ссылка на Facebook" class="link">facebook</a></li>
+							<li><a href="" aria-label="Ссылка на Twitter" class="link">twitter</a></li>
+							<li><a href="" aria-label="Ссылка на Linkedin" class="link">linkedin</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -145,10 +153,10 @@
 
 			<!-- Постоянные клиенты -->
 			<section>
-				<h2>
+				<h2 class="title">
 					Постоянные клиенты
 				</h2>
-				<ul>
+				<ul class="list">
 					<li>
 						<a href=""><img src="./images/company_logo_1.svg" alt="Логотип Компании" /></a>
 					</li>
@@ -170,22 +178,25 @@
 				</ul>
 			</section>
 		</main>
-		<footer>
-			<a href="">Web Studio</a>
+		<footer class="site-footer">
+			<a href="" class="logo">
+				<span>Web</span>
+				<span class="footer-logo">Studio</span>
+			</a>
 			<address>
-				г. Киев, пр-т Леси Украинки, 26
+				<p class="address">г. Киев, пр-т Леси Украинки, 26</p>
 
-				<ul>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				<ul class="list">
+					<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
-			<b>присоединяйтесь</b>
-			<ul>
-				<li><a href="" aria-label="Ссылка на Instagram">instagram</a></li>
-				<li><a href="" aria-label="Ссылка на Facebook">facebook</a></li>
-				<li><a href="" aria-label="Ссылка на Twitter">twitter</a></li>
-				<li><a href="" aria-label="Ссылка на Linkedin">linkedin</a></li>
+			<b class="title-list">присоединяйтесь</b>
+			<ul class="list">
+				<li><a href="" aria-label="Ссылка на Instagram" class="link">instagram</a></li>
+				<li><a href="" aria-label="Ссылка на Facebook" class="link">facebook</a></li>
+				<li><a href="" aria-label="Ссылка на Twitter" class="link">twitter</a></li>
+				<li><a href="" aria-label="Ссылка на Linkedin" class="link">linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
