переносит картинки в папку студиа

--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 				<h2 class="title">Особенности</h2>
 				<ul class="list">
 					<li>
-						<img src="./images/icon1.svg" alt="Антенна" />
+						<img src="./images/studio/icon1.svg" alt="Антенна" />
 						<h3 class="title-list">Внимание к деталям</h3>
 						<p>
 							Идейные соображения, а также начало повседневной работы по формированию позиции.
 						</p>
 					</li>
 					<li>
-						<img src="./images/icon2.svg" alt="Часы" />
+						<img src="./images/studio/icon2.svg" alt="Часы" />
 						<h3 class="title-list">Пунктуальность</h3>
 						<p>
 							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 						</p>
 					</li>
 					<li>
-						<img src="./images/icon3.svg" alt="Диаграмма" />
+						<img src="./images/studio/icon3.svg" alt="Диаграмма" />
 						<h3 class="title-list">Планирование</h3>
 						<p>
 							Равным образом консультация с широким активом в значительной степени обуславливает.
 						</p>
 					</li>
 					<li>
-						<img src="./images/icon4.svg" alt="Астронавт" />
+						<img src="./images/studio/icon4.svg" alt="Астронавт" />
 						<h3 class="title-list">Современные технологии</h3>
 						<p>
 							Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -75,15 +75,15 @@
 				<h2 class="title">Чем мы занимаемся</h2>
 				<ul class="list">
 					<li>
-						<img src="./images/img1.jpg" alt="Включенный ноутбук" width="370" />
+						<img src="./images/studio/img1.jpg" alt="Включенный ноутбук" width="370" />
 						<h3 class="title-list">Десктопные приложения</h3>
 					</li>
 					<li>
-						<img src="./images/img2.jpg" alt="Смартфон" width="370" />
+						<img src="./images/studio/img2.jpg" alt="Смартфон" width="370" />
 						<h3 class="title-list">Мобильные приложения</h3>
 					</li>
 					<li>
-						<img src="./images/img3.jpg" alt="Монитор" width="370" />
+						<img src="./images/studio/img3.jpg" alt="Монитор" width="370" />
 						<h3 class="title-list">Дизайнерские решения</h3>
 					</li>
 				</ul>
@@ -94,7 +94,7 @@
 				<h2 class="title">Наша Команда</h2>
 				<ul class="list">
 					<li>
-						<img src="./images/team_1.jpg" alt="Фото члена команды" width="270" height="260" />
+						<img src="./images/studio/team_1.jpg" alt="Фото члена команды" width="270" height="260" />
 						<h3 class="title-team">Николай Кучеренко</h3>
 						<p class="team-description">Product Designer</p>
 						<ul class="list">
@@ -108,7 +108,7 @@
 					</li>
 
 					<li>
-						<img src="./images/team_2.jpg" alt="Фото члена команды" width="270" height="260" />
+						<img src="./images/studio/team_2.jpg" alt="Фото члена команды" width="270" height="260" />
 						<h3 class="title-team">Ольга Иванова</h3>
 						<p class="team-description">Frontend Developer</p>
 						<ul class="list">
@@ -122,7 +122,7 @@
 					</li>
 
 					<li>
-						<img src="./images/team_3.jpg" alt="Фото члена команды" width="270" height="260" />
+						<img src="./images/studio/team_3.jpg" alt="Фото члена команды" width="270" height="260" />
 						<h3 class="title-team">Андрей Шевченко</h3>
 						<p class="team-description">Marketing</p>
 						<ul class="list">
@@ -136,7 +136,7 @@
 					</li>
 
 					<li>
-						<img src="./images/team_1.jpg" alt="Фото члена команды" width="270" height="260" />
+						<img src="./images/studio/team_1.jpg" alt="Фото члена команды" width="270" height="260" />
 						<h3 class="title-team">Иван Николаев</h3>
 						<p class="team-description">UI Designer</p>
 						<ul class="list">
@@ -158,22 +158,22 @@
 				</h2>
 				<ul class="list">
 					<li>
-						<a href=""><img src="./images/company_logo_1.svg" alt="Логотип Компании" /></a>
+						<a href=""><img src="./images/studio/company_logo_1.svg" alt="Логотип Компании" /></a>
 					</li>
 					<li>
-						<a href=""><img src="./images/company_logo_2.svg" alt="Логотип Компании" /></a>
+						<a href=""><img src="./images/studio/company_logo_2.svg" alt="Логотип Компании" /></a>
 					</li>
 					<li>
-						<a href=""><img src="./images/company_logo_3.svg" alt="Логотип Компании" /></a>
+						<a href=""><img src="./images/studio/company_logo_3.svg" alt="Логотип Компании" /></a>
 					</li>
 					<li>
-						<a href=""><img src="./images/company_logo_4.svg" alt="Логотип Компании" /></a>
+						<a href=""><img src="./images/studio/company_logo_4.svg" alt="Логотип Компании" /></a>
 					</li>
 					<li>
-						<a href=""><img src="./images/company_logo_5.svg" alt="Логотип Компании" /></a>
+						<a href=""><img src="./images/studio/company_logo_5.svg" alt="Логотип Компании" /></a>
 					</li>
 					<li>
-						<a href=""><img src="./images/company_logo_6.svg" alt="Логотип Компании" /></a>
+						<a href=""><img src="./images/studio/company_logo_6.svg" alt="Логотип Компании" /></a>
 					</li>
 				</ul>
 			</section>
