--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</a>
 			<nav class="site-nav">
 				<ul class="list">
-					<li><a href="" class="link">Студия</a></li>
+					<li><a href="" class="link current">Студия</a></li>
 					<li><a href="./portfolio.html" class="link">Портфолио</a></li>
 					<li><a href="" class="link">Контакты</a></li>
 				</ul>
