добавляет стилизированый header и footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -7,21 +7,26 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/portfolio.css" />
 		<title>Портфолио</title>
 	</head>
 	<body>
 		<header>
-			<a href="./index.html">Web Studio</a>
-			<nav>
-				<ul>
-					<li><a href="./index.html">Студия</a></li>
-					<li><a href="">Портфолио</a></li>
-					<li><a href="">Контакты</a></li>
+			<a href="./index.html" class="logo">
+				<span>Web</span>
+				Studio
+			</a>
+			<nav class="site-nav">
+				<ul class="list">
+					<li><a href="./index.html" class="link">Студия</a></li>
+					<li><a href="" class="link current">Портфолио</a></li>
+					<li><a href="" class="link">Контакты</a></li>
 				</ul>
 			</nav>
-			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+			<ul class="contact list">
+				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 		<main>
@@ -155,22 +160,25 @@
 				</ul>
 			</section>
 		</main>
-		<footer>
-			<a href="">Web Studio</a>
+		<footer class="site-footer">
+			<a href="" class="logo">
+				<span>Web</span>
+				<span class="footer-logo">Studio</span>
+			</a>
 			<address>
-				г. Киев, пр-т Леси Украинки, 26
+				<p class="address">г. Киев, пр-т Леси Украинки, 26</p>
 
-				<ul>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				<ul class="list">
+					<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
-			<b>присоединяйтесь</b>
-			<ul>
-				<li><a href="" aria-label="Ссылка на Instagram">instagram</a></li>
-				<li><a href="" aria-label="Ссылка на Facebook">facebook</a></li>
-				<li><a href="" aria-label="Ссылка на Twitter">twitter</a></li>
-				<li><a href="" aria-label="Ссылка на Linkedin">linkedin</a></li>
+			<b class="title-list">присоединяйтесь</b>
+			<ul class="list">
+				<li><a href="" aria-label="Ссылка на Instagram" class="link">instagram</a></li>
+				<li><a href="" aria-label="Ссылка на Facebook" class="link">facebook</a></li>
+				<li><a href="" aria-label="Ссылка на Twitter" class="link">twitter</a></li>
+				<li><a href="" aria-label="Ссылка на Linkedin" class="link">linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
