--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="./css/style.css" />
-		<link rel="stylesheet" href="./css/portfolio.css" />
+
 		<title>Портфолио</title>
 	</head>
 	<body>
@@ -31,127 +31,127 @@
 		</header>
 		<main>
 			<section>
-				<h1>Мои Работы</h1>
-				<ul>
-					<li><button class="button">Все</button></li>
-					<li><button class="button">Веб-сайты</button></li>
-					<li><button class="button">Приложения</button></li>
-					<li><button class="button">Дизайн</button></li>
-					<li><button class="button">Маркетинг</button></li>
+				<h1 class="title">Мои Работы</h1>
+				<ul class="list">
+					<li><button class="button-portfolio">Все</button></li>
+					<li><button class="button-portfolio">Веб-сайты</button></li>
+					<li><button class="button-portfolio">Приложения</button></li>
+					<li><button class="button-portfolio">Дизайн</button></li>
+					<li><button class="button-portfolio">Маркетинг</button></li>
 				</ul>
-				<ul>
+				<ul class="list">
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img.jpg" alt="Фото нашей команды" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Технокряк
 							</h2>
-							<p>Веб-сайт</p>
-							<p>
+							<p class="title-description">Веб-сайт</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_2.jpg" alt="Фото игроков баскетбола" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Постер New Orlean vs Golden Star
 							</h2>
-							<p>Дизайн</p>
-							<p>
+							<p class="title-description">Дизайн</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_3.jpg" alt="Логотип Ресотрана" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Ресторан Seafood
 							</h2>
-							<p>Приложение</p>
-							<p>
+							<p class="title-description">Приложение</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_4.jpg" alt="Фото наушников" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Проект Prime
 							</h2>
-							<p>Маркетинг</p>
-							<p>
+							<p class="title-description">Маркетинг</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_5.jpg" alt="Фото коробок" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Проект Boxes
 							</h2>
-							<p>Приложение</p>
-							<p>
+							<p class="title-description">Приложение</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_6.jpg" alt="Монитор" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Inspiration has no Borders
 							</h2>
-							<p>Веб-сайт</p>
-							<p>
+							<p class="title-description">Веб-сайт</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_7.jpg" alt="Журнал" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Издание Limited Edition
 							</h2>
-							<p>Дизайн</p>
-							<p>
+							<p class="title-description">Дизайн</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_8.jpg" alt="Ярлык" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Проект LAB
 							</h2>
-							<p>Маркетинг</p>
-							<p>
+							<p class="title-description">Маркетинг</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="" class="link">
 							<img src="./images/portfolio/img_9.jpg" alt="Ноутбук" width="370" />
-							<h2>
+							<h2 class="title-list-portfolio">
 								Growing Business
 							</h2>
-							<p>Приложение</p>
-							<p>
+							<p class="title-description">Приложение</p>
+							<p class="portfolio-description">
 								Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для
 								цифрового шпионажа и атак на защищённые сервера конкурентов.
 							</p>
